Changes to allow for usage in the browser + Exceptions now use UserException objects + Error class used to make processing errors jump out for the user + Added Answer section to html page + corrected simplify method and attached it to the html form + fixed logic error in tokenizer + smarter handling of leaf nodes for the expression tree

--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,13 @@ table {
 th {
     border-bottom: 1px solid black;
 }
+
+.error {
+    color: #ff0000;
+    font-weight: bold;
+    /*letter-spacing: .1em;*/
+}
+
 #divTable {
     width: 80%;
     margin: auto;
